fixes nav bar to the top

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="header-naivgation">
+        <nav class="header-naivgation" is='header-nav'>
             <div class="logo"> 
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
             </div> 
