Formatting and indentation of Nav Fix

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
+   >
     <header>
-        <nav class="header-naivgation" is='header-nav'>
+        <nav class="header-naivgation" id='header-nav'>
+            
             <div class="logo"> 
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
             </div> 
@@ -67,4 +69,5 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. Vestibulum tincidunt iaculis posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. </p>
     </footer>
 </body>
+<script src="js/index.js"></script>
 </html>
