Added Scrollbar with JS

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-   >
+  
     <header>
         <nav class="header-naivgation" id='header-nav'>
+            <div class='scrollbar'>
+                <div class="progress-container" id='prog-cont'>
+                    <div class="progress-bar" id="myBar"></div>
+                  </div>
+            </div>
             
             <div class="logo"> 
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
@@ -18,9 +23,9 @@
             <ul class="un-list">
                 <li><a href="#">MODELS</a></li>
                 <li><a href="#">PREMIUM</a></li>
-                <li><a href="#">MY ACCOUNT</a></li>
-                <li><a href="#">CONTACT US</a></li>
-                <li><a href="#">ABOUT US</a></li>
+                <li><a href="#">ACCOUNT</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">SUPPORT</a></li>
             </ul>
         </nav>
     </header>
