--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-  
     <header>
         <nav class="header-naivgation" id='header-nav'>
             <div class='scrollbar'>
@@ -17,7 +16,7 @@
                   </div>
             </div>
             
-            <div class="logo"> 
+            <div> 
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
             </div> 
             <ul class="un-list">
