--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </ul>
         </nav>
     </header>
+    <main>
     <div>
         <img class="background" src="images/bg.png" alt="R8 Coupe">
         <div class="text-background">I Have a DREAM </br><span class="r8"> R8 Coupe</span></div>
@@ -57,6 +58,7 @@
         <p>With a variety of endless possibilities to tailor your Audi to your needs and tastes, Audi Accessories can create an Audi as unique as you are.</br><button>Built and Price</button></p>
         <img src="images/handle.png" alt="handle">
     </div>
+    </main>
     <button class="custom">Build your custom R8 Coupé</button>
     <footer >
         <div class="footer">
@@ -72,6 +74,6 @@
         <p>© 2020 Audi Canada inc.</br>Terms And Conditions:</br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. Vestibulum tincidunt iaculis posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. </p>
     </footer>
+    <script src="js/index.js"></script>
 </body>
-<script src="js/index.js"></script>
 </html>
