--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,19 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
 </head>
+
 <body>
     <header>
         <nav class="header-naivgation" id='header-nav'>
             <div class='scrollbar'>
                 <div class="progress-container" id='prog-cont'>
                     <div class="progress-bar" id="myBar"></div>
-                  </div>
+                </div>
             </div>
-            
-            <div> 
+
+            <div>
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
-            </div> 
+            </div>
             <ul class="un-list">
                 <li><a href="#">MODELS</a></li>
                 <li><a href="#">PREMIUM</a></li>
@@ -29,38 +31,48 @@
         </nav>
     </header>
     <main>
-    <div>
-        <img class="background" src="images/bg.png" alt="R8 Coupe">
-        <div class="text-background">I Have a DREAM </br><span class="r8"> R8 Coupe</span></div>
-    </div>
-    <div class="orange">
-    <h1>Some LEGENDS are real…</h1>
-    <p>While many cars like to claim racing heritage, the R8 Coupé is a true thoroughbred. Sharing 50% of its parts with R8 GT3 LMS race car, this car is born on the track and built for the road.</p>
-    <img src="images/r8.png" alt="Orange R8">
-    </div>
-    <div class="red-s8">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque culpa recusandae beatae esse maxime ipsum molestiae minus vitae impedit eum ut accusantium officia, consequatur temporibus explicabo quo rerum cumque?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, saepe dolorum, ad distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem adipisci illo. Aperiam, ducimus</p>
-        <img src="images/s8.png" alt="Audi S8">
-    </div>
-    <div class="red-s8-head">
-        <img src="images/red-s8.png" alt="Audi S8 Head">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque culpa recusandae beatae esse maxime ipsum molestiae minus vitae impedit eum ut accusantium officia, consequatur temporibus explicabo quo rerum cumque?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, saepe dolorum, ad distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem adipisci illo. Aperiam, ducimus</p>
-    </div>
-    <h2>PERFORMANCE</h2>
-    <section>
-        <ul class="performance">
-            <li>Power</br>602 HP</li>
-            <li>0-100 km/h in</br>3.3 sec</li>
-            <li>Top speed up</br>330 KM/h</li>
-        </ul>
-    </section>
-    <div class="handle">
-        <p>With a variety of endless possibilities to tailor your Audi to your needs and tastes, Audi Accessories can create an Audi as unique as you are.</br><button>Built and Price</button></p>
-        <img src="images/handle.png" alt="handle">
-    </div>
+        <div>
+            <img class="background" src="images/bg.png" alt="R8 Coupe">
+            <div class="text-background">I Have a DREAM </br><span class="r8"> R8 Coupe</span></div>
+        </div>
+        <div class="orange">
+            <h1>Some LEGENDS are real…</h1>
+            <p>While many cars like to claim racing heritage, the R8 Coupé is a true thoroughbred. Sharing 50% of its
+                parts with R8 GT3 LMS race car, this car is born on the track and built for the road.</p>
+            <img src="images/r8.png" alt="Orange R8">
+        </div>
+        <div class="red-s8">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque culpa recusandae beatae esse
+                maxime ipsum molestiae minus vitae impedit eum ut accusantium officia, consequatur temporibus explicabo
+                quo rerum cumque?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, saepe dolorum, ad
+                distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem
+                adipisci illo. Aperiam, ducimus</p>
+            <img src="images/s8.png" alt="Audi S8">
+        </div>
+        <div class="red-s8-head">
+            <img src="images/red-s8.png" alt="Audi S8 Head">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel doloremque culpa recusandae beatae esse
+                maxime ipsum molestiae minus vitae impedit eum ut accusantium officia, consequatur temporibus explicabo
+                quo rerum cumque?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, saepe dolorum, ad
+                distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem
+                adipisci illo. Aperiam, ducimus</p>
+        </div>
+        <h2>PERFORMANCE</h2>
+        <section>
+            <ul class="performance">
+                <li>Power</br>602 HP</li>
+                <li>0-100 km/h in</br>3.3 sec</li>
+                <li>Top speed up</br>330 KM/h</li>
+            </ul>
+        </section>
+        <div class="handle">
+            <p>With a variety of endless possibilities to tailor your Audi to your needs and tastes, Audi Accessories
+                can create an Audi as unique as you are.</br><button>Built and Price</button></p>
+            <img src="images/handle.png" alt="handle">
+        </div>
     </main>
     <button class="custom">Build your custom R8 Coupé</button>
-    <footer >
+    <footer>
         <div class="footer">
             <img src="images/logo.png" alt="logo">
             <ul>
@@ -72,8 +84,17 @@
             </ul>
         </div>
         <p>© 2020 Audi Canada inc.</br>Terms And Conditions:</br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. Vestibulum tincidunt iaculis posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. </p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat
+            vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget
+            euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum,
+            sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac
+            rhoncus magna. Vestibulum tincidunt iaculis posuere. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat
+            consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra,
+            mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada
+            elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. </p>
     </footer>
     <script src="js/index.js"></script>
 </body>
+
 </html>
