Headers fixed relative to articles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <div class="text-background">I Have a DREAM </br><span class="r8"> R8 Coupe</span></div>
         </div>
         <div class="orange">
-            <h1>Some LEGENDS are real…</h1>
+            <div class="header-leg" id="myHeader-leg">
+            <h1 class='fixed-header'>MODELS</h1>
+            </div>
+          
             <p>While many cars like to claim racing heritage, the R8 Coupé is a true thoroughbred. Sharing 50% of its
                 parts with R8 GT3 LMS race car, this car is born on the track and built for the road.</p>
             <img src="images/r8.png" alt="Orange R8">
@@ -59,7 +62,10 @@
                 distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem
                 adipisci illo. Aperiam, ducimus</p>
         </div>
-        <h2>PERFORMANCE</h2>
+        
+        <div class="header-per" id="myHeader-per">
+        <h1 class='fixed-header'>PERFORMANCE</h1>
+        </div>
         <section>
             <ul class="performance">
                 <li>Power</br>602 HP</li>
