Made navigation responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Nishant and Jobanjit">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 </head>
 
 <body>
@@ -23,13 +25,32 @@
             <div>
                 <a href="index.html"><img class="logo-top" src="images/logo.png" alt="logo"></a>
             </div>
-            <ul class="un-list">
-                <li><a href="#">MODELS</a></li>
-                <li><a href="#">PREMIUM</a></li>
-                <li><a href="#">ACCOUNT</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">SUPPORT</a></li>
-            </ul>
+            
+            <div class="mobile-container">               
+                <div class="topnav">
+                   <div id="myLinks">                   
+                    <li><a href="#">MODELS</a></li>
+                    <li><a href="#">PREMIUM</a></li>
+                    <li><a href="#">ACCOUNT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">SUPPORT</a></li>
+                </ul>
+                  </div>
+                  <a href="javascript:void(0);" class="icon" onclick="mynavFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+                </div>
+            </div>
+            <div class='nav-container'>
+                <ul class="un-list">
+                    <li><a href="#">MODELS</a></li>
+                    <li><a href="#">PREMIUM</a></li>
+                    <li><a href="#">ACCOUNT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">SUPPORT</a></li>
+                </ul>
+            </div>
+           
         </nav>
     </header>
     <main>
