--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main>
         <div>
             <img class="background" src="images/bg.png" alt="R8 Coupe">
-            <div class="text-background">I Have a DREAM </br><span class="r8"> R8 Coupe</span></div>
+            <div class="text-background"><span class='dream'>I Have a DREAM </span></br><span class="r8"> R8 Coupe</span></div>
         </div>
         <div class="orange">
             <div class="header-leg" id="myHeader-leg">
@@ -73,7 +73,7 @@
                 quo rerum cumque?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, saepe dolorum, ad
                 distinctio modi illum incidunt atque eos repudiandae debitis vel expedita quas ea, exercitationem
                 adipisci illo. Aperiam, ducimus</p>
-            <img src="images/s8.png" alt="Audi S8">
+                <img src="images/s8.png" alt="Audi S8">
         </div>
         <div class="red-s8-head">
             <img src="images/red-s8.png" alt="Audi S8 Head">
@@ -96,14 +96,14 @@
         </section>
         <div class="handle">
             <p>With a variety of endless possibilities to tailor your Audi to your needs and tastes, Audi Accessories
-                can create an Audi as unique as you are.</br><button>Built and Price</button></p>
+                can create an Audi as unique as you are.</br><button class='custom-bp'>Built and Price</button></p>
             <img src="images/handle.png" alt="handle">
         </div>
     </main>
     <button class="custom">Build your custom R8 Coupé</button>
     <footer>
         <div class="footer">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.png" alt="logo" class='audi-logo-footer'>
             <ul>
                 <li>View All Models</li>
                 <li>|</li>
@@ -112,17 +112,11 @@
                 <li>Contact Audi</li>
             </ul>
         </div>
-        <p>© 2020 Audi Canada inc.</br>Terms And Conditions:</br>
+        <p><span class='copyrights'>© 2020 Audi Canada inc.</br>Terms And Conditions:</span></br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero augue, porta et finibus a, feugiat
             vitae lectus. Fusce sed quam vel sapien consequat consequat at sodales elit. Vestibulum semper dolor eget
             euismod posuere. Praesent vitae nibh pharetra, mattis tortor ut, porttitor felis. Aenean id tristique ipsum,
-            sed dictum metus. Pellentesque at malesuada elit, sit amet eleifend urna. Praesent nec placerat arcu, ac
-            rhoncus magna. Vestibulum tincidunt iaculis posuere. Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit. Cras libero augue, porta et finibus a, feugiat vitae lectus. Fusce sed quam vel sapien consequat
-            consequat at sodales elit. Vestibulum semper dolor eget euismod posuere. Praesent vitae nibh pharetra,
-            mattis tortor ut, porttitor felis. Aenean id tristique ipsum, sed dictum metus. Pellentesque at malesuada
-            elit, sit amet eleifend urna. Praesent nec placerat arcu, ac rhoncus magna. </p>
-    </footer>
+            sed dictum metus.  </footer>
     <script src="js/index.js"></script>
 </body>
 
